[ios] Dismiss recent tabs context menu from tab grid

Previously, opening a new tab search from today view or 3d touch would
put the tab grid in an invalid state, if the context menu was showing.
The new tab would not show, and the UI was no longer interactable.
The cause was that the context menu was not being dismissed.

This CL properly dismisses the recent tabs context menu on top of the
tab grid.

Bug: 852263
Cq-Include-Trybots: luci.chromium.try:ios-simulator-full-configs;master.tryserver.chromium.mac:ios-simulator-cronet
Change-Id: I2607f3ba4012d397f5ffc2faa4bb190c1fc980ba
Reviewed-on: https://chromium-review.googlesource.com/1102193
Reviewed-by: edchin <edchin@chromium.org>
Reviewed-by: Mark Cogan <marq@chromium.org>
Commit-Queue: edchin <edchin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#568943}
Former-commit-id: eba3256439e754f69820fe035dead4920b683e2e